整理转换类，重构SERVICE